--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                   <img src="../level 2 task 2/Passport Photo.jpg" alt="">
+                   <img src="../PRODIGY_WD_04/Photo.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I am Md Ahmad Raza  </div>
-                    <p>I am Full Stack Developer. I have done my bechelor Of Technology  in Computer Science And Engineering   from Maulana Abul Kalam Azad University Of Technology   in 2021 with first class. I am from Farakka. I am looking for a job in software industry. Currently, I am doing a virtual
+                    <p>I am Web Developer. I have done my bechelor Of Technology  in Computer Science And Engineering   from Maulana Abul Kalam Azad University Of Technology   in 2021 with first class. I am from Farakka. I am looking for a job in software industry. Currently, I am doing a virtual
                         Internship in Web Development and Designing from Oasis Infobyte Company. I have also completed Web Development Internship from Oasis Infobyte.
                         You can have a look at my resume.
                     </p>
-                    <a href="../level 2 task 2/" target="_blank">Download CV</a>
+                    <a href="../PRODIGY_WD_04/" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
